--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,5 @@
-﻿# CMakeList.txt : CMake project for masis, include source and define
-# project specific logic here.
-#
+﻿# CMakeList.txt : CMake project for Kaizen.
+
 cmake_minimum_required (VERSION 3.8)
 
 # Enable Hot Reload for MSVC compilers if supported.
