--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ project ("kaizen")
 add_custom_command(
     OUTPUT  kaizen.h
     COMMAND python3 ${CMAKE_SOURCE_DIR}/make_kaizen.py
-    DEPENDS containers/list.h containers/vector.h containers/array.h
+    DEPENDS types/list.h types/vector.h types/array.h
     COMMENT "GENERATING kaizen.h"
 )
 
@@ -23,8 +23,8 @@ add_custom_target(generate_kaizen_main_header ALL DEPENDS kaizen.h)
 
 ################################### Add source to this project's executable.
 add_executable(kaizen
-    "test_kaizen.cpp" "test_kaizen.h" "containers/vector.h" "tests/test_vector.h" "utils.h"
-    "containers/list.h" "tests/test_list.h"
+    "test_kaizen.cpp" "test_kaizen.h" "types/vector.h" "tests/test_vector.h" "utils.h"
+    "types/list.h" "tests/test_list.h"
 )
 
 # Set a dependency on the custom target to ensure it runs before the kaizen executable is built
