--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,10 +31,10 @@ add_dependencies(generate_kaizen_header delete_kaizen_header)
 
 ################################### Add source to this project's executable.
 add_executable(kaizen "test_kaizen.cpp"
-    "datas/vector.h" "datas/list.h" "datas/array.h"
+    "datas/vector.h" "datas/list.h" "datas/array.h" "datas/deque.h"
     "functions/utils.h"
-    "test_kaizen.h" "tests/test_vector.h" "tests/test_list.h"
-)
+    "test_kaizen.h" "tests/test_vector.h" "tests/test_list.h" "tests/test_deque.h"
+  )
 
 # Set a dependency on the custom target to ensure it runs before the kaizen executable is built
 add_dependencies(kaizen generate_kaizen_header)
