--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -5,8 +5,12 @@ name: CMake Multi Platform Build
 on:
   push:
     branches: [ "master" ]
+    paths-ignore:
+      - 'README.md'
   pull_request:
     branches: [ "master" ]
+    paths-ignore:
+      - 'README.md'
 
 jobs:
   build:
