--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -7,10 +7,12 @@ on:
     branches: [ "master" ]
     paths-ignore:
       - 'README.md'
+      - '.gitignore'
   pull_request:
     branches: [ "master" ]
     paths-ignore:
       - 'README.md'
+      - '.gitignore'
 
 jobs:
   build:
