--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -83,3 +83,8 @@ jobs:
       # the default Windows generator is a multi-config generator (Visual Studio generator).
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest --build-config ${{ matrix.build_type }}
+
+    - name: Run kaizen executable
+      if: success()
+      working-directory: ${{ steps.strings.outputs.build-output-dir }}
+      run: ./kaizen -verbose  # should run on Windows too, no need for ".\kaizen.exe -verbose"
