--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -84,7 +84,8 @@ jobs:
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest --build-config ${{ matrix.build_type }}
 
-#    - name: Run kaizen executable
-#      if: success()
-#      working-directory: ${{ steps.strings.outputs.build-output-dir }}
-#      run: ./kaizen -verbose  # should run on Windows too, no need for ".\kaizen.exe -verbose"
+      # TODO: Seems like this step should be configured in CMake, but there it isn't picked up. See why.
+    - name: Test - Run kaizen executable
+      if: success()
+      working-directory: ${{ steps.strings.outputs.build-output-dir }}
+      run: ./kaizen -verbose  # should run on Windows too, no need for ".\kaizen.exe -verbose"
