Always keep CI-generated artifacts
For example, when builds fail, so we can inspect why

--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -78,6 +78,7 @@ jobs:
       run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }}
 
     - name: Upload Artifacts
+      if: always() # so that we can get the artifacts and inspect why builds fail, for example
       uses: actions/upload-artifact@v2
       with:
         name: kaizen-ci-generated-files
