--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -85,8 +85,8 @@ jobs:
 
     - name: Install dependencies
       run: |
-        sudo apt-get update
-        sudo apt-get install -y ${{ matrix.c_compiler }} ${{ matrix.c_compiler }}++  # install the necessary compilers
+        apt-get update
+        apt-get install -y ${{ matrix.c_compiler }} ${{ matrix.c_compiler }}++  # install the necessary compilers
 
     - name: Set reusable strings
       # Turn repeated input strings (such as the build output directory) into step outputs.
