CI: Undo previous 2 commits
This is for testing

--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -83,10 +83,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Install dependencies
-      run: |
-        apt-get update
-        apt-get install -y ${{ matrix.c_compiler }} ${{ matrix.c_compiler }}++  # install the necessary compilers
+    #- name: Install dependencies
+    #  run: |
+    #    apt-get update
+    #    apt-get install -y ${{ matrix.c_compiler }} ${{ matrix.c_compiler }}++  # install the necessary compilers
 
     - name: Set reusable strings
       # Turn repeated input strings (such as the build output directory) into step outputs.
