Differentiate Debug vs Rrelease builds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,19 @@ endif()
 
 project("kaizen")
 
+if(NOT CMAKE_BUILD_TYPE)
+  set(CMAKE_BUILD_TYPE Debug CACHE STRING "Build type" FORCE)
+endif()
+
+# Set compiler flags for different configurations
+if(MSVC)
+  set(CMAKE_CXX_FLAGS_DEBUG   "${CMAKE_CXX_FLAGS_DEBUG} /MDd /Zi")
+  set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MD /O2")
+else()
+  set(CMAKE_CXX_FLAGS_DEBUG   "${CMAKE_CXX_FLAGS_DEBUG} -g")
+  set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3")
+endif()
+
 ################################### Delete kaizen.h if it exists
 
 add_custom_target(delete_kaizen_header
