CI: Run tests on Windows too
In addition to existing runs on Linux

--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -115,8 +115,8 @@ jobs:
       shell: bash
       run: ./kaizen -verbose
 
-    #- name: Test by running kaizen executable (Windows)
-    #  if: success() && runner.os == 'Windows'
-    #  working-directory: ${{ steps.strings.outputs.build-output-dir }}
-    #  shell: bash
-    #  run: .\\Release\\kaizen.exe -verbose
+    - name: Test by running kaizen executable (Windows)
+      if: success() && runner.os == 'Windows'
+      working-directory: ${{ steps.strings.outputs.build-output-dir }}
+      shell: bash
+      run: .\\Release\\kaizen.exe -verbose
