--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -113,10 +113,26 @@ jobs:
       if: success() && runner.os != 'Windows'
       working-directory: ${{ steps.strings.outputs.build-output-dir }}
       shell: bash
-      run: ./kaizen -verbose
+      run: |
+        OUTPUT=$(./kaizen -verbose)
+        echo "$OUTPUT"
+        if [[ "$OUTPUT" == *"ALL TESTS PASS"* ]]; then
+          echo "ALL TESTS PASS"
+        else
+          echo "NOT ALL TESTS PASS"
+          exit 1
+        fi
 
     - name: Test by running kaizen executable (Windows)
       if: success() && runner.os == 'Windows'
       working-directory: ${{ steps.strings.outputs.build-output-dir }}
       shell: bash
-      run: .\\Release\\kaizen.exe -verbose
+      run: |
+        OUTPUT=$(.\\Release\\kaizen.exe -verbose)
+        echo "$OUTPUT"
+        if [[ "$OUTPUT" == *"ALL TESTS PASS"* ]]; then
+          echo "All tests passed."
+        else
+          echo "NOT ALL TESTS PASS"
+          exit 1
+        fi
