--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -63,6 +63,8 @@ jobs:
             c_compiler: cl
           - os: ubuntu-latest
             c_compiler: clang
+          - os: ubuntu-latest
+            c_compiler: clang-14
 
     steps:
     - uses: actions/checkout@v3
