Update c_compiler options in CI configuration
Removed older gcc versions from c_compiler options,
leaving only 'gcc' and 'cl'.

--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -33,7 +33,8 @@ jobs:
         build_type: [Release]
        # Uncomment the line below when this is fixed: https://github.com/actions/runner-images/issues/8659
        #c_compiler: [gcc, clang, cl, 'gcc-11', 'gcc-10', 'gcc-9', 'clang-14']
-        c_compiler: [gcc, cl, 'gcc-11', 'gcc-10', 'gcc-9']
+       #c_compiler: [gcc, cl, 'gcc-11', 'gcc-10', 'gcc-9']
+        c_compiler: [gcc, cl]
         include:
           - os: windows-latest
             c_compiler: cl
